Kinda lost as far as git is concerned. Commiting now just to be safe